// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FlightCard > FlightCard component snapshot 1`] = `
<div>
  <div
    class="w-full h-full"
    style="opacity: 0; filter: blur(5px); transform: translateY(-10px) translateZ(0);"
  >
    <div
      class="_contentGrid_4387c6"
    >
      <div
        class="undefined _defaultCard_c57b5c max-h-[45rem] overflow-scroll"
      >
        <button
          class="flex items-center"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angle-down fa-lg _icon_c57b5c w-4 pr-2 icon"
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
              fill="currentColor"
            />
          </svg>
          <h1
            class="text-2xl font-bold"
          >
            Flights
          </h1>
        </button>
        <h2
          class="pl-6 text-zinc-400"
        >
          search, book, and add to itinerary
        </h2>
        <div
          class="px-3 pb-2 pt-3"
        >
          <form>
            <div
              class="undefined flex items-center justify-between w-100"
            >
              <div
                class="w-full"
              >
                <div>
                  <label
                    class="_label_f5db26"
                  >
                    Departing From
                  </label>
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-location-arrow _icon_f5db26"
                      data-icon="location-arrow"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8s16.1 25.8 31.4 25.8H224V432c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      label="Departing From"
                      name="departure"
                      placeholder="e.g.  New York"
                      required=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="_inlineIcon_919a0b"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-right fa-lg dark:text-white text-black w-3"
                  data-icon="arrow-right"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="w-full"
              >
                <div>
                  <label
                    class="_label_f5db26"
                  >
                    Arriving To
                  </label>
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-location-arrow _icon_f5db26"
                      data-icon="location-arrow"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8s16.1 25.8 31.4 25.8H224V432c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      label="Arriving To"
                      name="destination"
                      placeholder="e.g.  Los Angeles"
                      required=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="undefined flex items-center justify-between w-100"
            >
              <div
                class="w-full"
              >
                <div>
                  <label
                    class="_label_f5db26"
                  >
                    Departure Date
                  </label>
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-calendar-days _icon_f5db26"
                      data-icon="calendar-days"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zm64 80v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm128 0v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H336zM64 400v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H208zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H336c-8.8 0-16 7.2-16 16z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      label="Departure Date"
                      name="departure-date"
                      placeholder="Date"
                      required=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="_inlineIcon_919a0b"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-right fa-lg dark:text-white text-black w-3"
                  data-icon="arrow-right"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="w-full"
              >
                <div>
                  <label
                    class="_label_f5db26"
                  >
                    Return Date
                  </label>
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-calendar-days _icon_f5db26"
                      data-icon="calendar-days"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zm64 80v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm128 0v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H336zM64 400v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H208zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H336c-8.8 0-16 7.2-16 16z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      label="Return Date"
                      name="return-date"
                      placeholder="Date"
                      required=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="undefined flex items-center justify-between w-100"
            >
              <div
                class="w-full"
              >
                <div>
                  <label
                    class="_label_f5db26"
                  >
                    Number Passengers
                  </label>
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-user _icon_f5db26"
                      data-icon="user"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      label="Number Passengers"
                      name="number_of_passengers"
                      placeholder="Passengers"
                      required=""
                      type="number"
                    />
                  </div>
                </div>
              </div>
              <div
                class="_inlineIcon_919a0b"
              >
                <div
                  class="w-3"
                />
              </div>
              <div
                class="w-full"
              >
                <div>
                  <div
                    class="w-full h-7"
                  />
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-chair _icon_f5db26"
                      data-icon="chair"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M248 48V256h48V58.7c23.9 13.8 40 39.7 40 69.3V256h48V128C384 57.3 326.7 0 256 0H192C121.3 0 64 57.3 64 128V256h48V128c0-29.6 16.1-55.5 40-69.3V256h48V48h48zM48 288c-12.1 0-23.2 6.8-28.6 17.7l-16 32c-5 9.9-4.4 21.7 1.4 31.1S20.9 384 32 384l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32V384H352v96c0 17.7 14.3 32 32 32s32-14.3 32-32V384c11.1 0 21.4-5.7 27.2-15.2s6.4-21.2 1.4-31.1l-16-32C423.2 294.8 412.1 288 400 288H48z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      name="cabin_preference"
                      placeholder="Cabin Preference"
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              class="mt-4 _secondary_c8148e _button_c8148e"
              variant="secondary"
            >
              <div
                class="w-full justify-self-center"
              >
                Find Flights
              </div>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Page Component > matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="w-full h-full"
    style="opacity: 0; filter: blur(5px); transform: translateY(-10px) translateZ(0);"
  >
    <div
      class="_contentGrid_4387c6"
    >
      <div
        class="undefined _defaultCard_c57b5c max-h-[45rem] overflow-scroll"
      >
        <button
          class="flex items-center"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-angle-down fa-lg _icon_c57b5c w-4 pr-2 icon"
            data-icon="angle-down"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 448 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"
              fill="currentColor"
            />
          </svg>
          <h1
            class="text-2xl font-bold"
          >
            Flights
          </h1>
        </button>
        <h2
          class="pl-6 text-zinc-400"
        >
          search, book, and add to itinerary
        </h2>
        <div
          class="px-3 pb-2 pt-3"
        >
          <form>
            <div
              class="undefined flex items-center justify-between w-100"
            >
              <div
                class="w-full"
              >
                <div>
                  <label
                    class="_label_f5db26"
                  >
                    Departing From
                  </label>
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-location-arrow _icon_f5db26"
                      data-icon="location-arrow"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8s16.1 25.8 31.4 25.8H224V432c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      label="Departing From"
                      name="departure"
                      placeholder="e.g.  New York"
                      required=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="_inlineIcon_919a0b"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-right fa-lg dark:text-white text-black w-3"
                  data-icon="arrow-right"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="w-full"
              >
                <div>
                  <label
                    class="_label_f5db26"
                  >
                    Arriving To
                  </label>
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-location-arrow _icon_f5db26"
                      data-icon="location-arrow"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M429.6 92.1c4.9-11.9 2.1-25.6-7-34.7s-22.8-11.9-34.7-7l-352 144c-14.2 5.8-22.2 20.8-19.3 35.8s16.1 25.8 31.4 25.8H224V432c0 15.3 10.8 28.4 25.8 31.4s30-5.1 35.8-19.3l144-352z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      label="Arriving To"
                      name="destination"
                      placeholder="e.g.  Los Angeles"
                      required=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="undefined flex items-center justify-between w-100"
            >
              <div
                class="w-full"
              >
                <div>
                  <label
                    class="_label_f5db26"
                  >
                    Departure Date
                  </label>
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-calendar-days _icon_f5db26"
                      data-icon="calendar-days"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zm64 80v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm128 0v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H336zM64 400v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H208zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H336c-8.8 0-16 7.2-16 16z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      label="Departure Date"
                      name="departure-date"
                      placeholder="Date"
                      required=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="_inlineIcon_919a0b"
              >
                <svg
                  aria-hidden="true"
                  class="svg-inline--fa fa-arrow-right fa-lg dark:text-white text-black w-3"
                  data-icon="arrow-right"
                  data-prefix="fas"
                  focusable="false"
                  role="img"
                  viewBox="0 0 448 512"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"
                    fill="currentColor"
                  />
                </svg>
              </div>
              <div
                class="w-full"
              >
                <div>
                  <label
                    class="_label_f5db26"
                  >
                    Return Date
                  </label>
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-calendar-days _icon_f5db26"
                      data-icon="calendar-days"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M128 0c17.7 0 32 14.3 32 32V64H288V32c0-17.7 14.3-32 32-32s32 14.3 32 32V64h48c26.5 0 48 21.5 48 48v48H0V112C0 85.5 21.5 64 48 64H96V32c0-17.7 14.3-32 32-32zM0 192H448V464c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V192zm64 80v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm128 0v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H208c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V272c0-8.8-7.2-16-16-16H336zM64 400v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H80c-8.8 0-16 7.2-16 16zm144-16c-8.8 0-16 7.2-16 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H208zm112 16v32c0 8.8 7.2 16 16 16h32c8.8 0 16-7.2 16-16V400c0-8.8-7.2-16-16-16H336c-8.8 0-16 7.2-16 16z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      label="Return Date"
                      name="return-date"
                      placeholder="Date"
                      required=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="undefined flex items-center justify-between w-100"
            >
              <div
                class="w-full"
              >
                <div>
                  <label
                    class="_label_f5db26"
                  >
                    Number Passengers
                  </label>
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-user _icon_f5db26"
                      data-icon="user"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M224 256A128 128 0 1 0 224 0a128 128 0 1 0 0 256zm-45.7 48C79.8 304 0 383.8 0 482.3C0 498.7 13.3 512 29.7 512H418.3c16.4 0 29.7-13.3 29.7-29.7C448 383.8 368.2 304 269.7 304H178.3z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      label="Number Passengers"
                      name="number_of_passengers"
                      placeholder="Passengers"
                      required=""
                      type="number"
                    />
                  </div>
                </div>
              </div>
              <div
                class="_inlineIcon_919a0b"
              >
                <div
                  class="w-3"
                />
              </div>
              <div
                class="w-full"
              >
                <div>
                  <div
                    class="w-full h-7"
                  />
                  <div
                    class="_inputWrapper_f5db26"
                  >
                    <svg
                      aria-hidden="true"
                      class="svg-inline--fa fa-chair _icon_f5db26"
                      data-icon="chair"
                      data-prefix="fas"
                      focusable="false"
                      role="img"
                      viewBox="0 0 448 512"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M248 48V256h48V58.7c23.9 13.8 40 39.7 40 69.3V256h48V128C384 57.3 326.7 0 256 0H192C121.3 0 64 57.3 64 128V256h48V128c0-29.6 16.1-55.5 40-69.3V256h48V48h48zM48 288c-12.1 0-23.2 6.8-28.6 17.7l-16 32c-5 9.9-4.4 21.7 1.4 31.1S20.9 384 32 384l0 96c0 17.7 14.3 32 32 32s32-14.3 32-32V384H352v96c0 17.7 14.3 32 32 32s32-14.3 32-32V384c11.1 0 21.4-5.7 27.2-15.2s6.4-21.2 1.4-31.1l-16-32C423.2 294.8 412.1 288 400 288H48z"
                        fill="currentColor"
                      />
                    </svg>
                    <input
                      class="_input_f5db26"
                      icon="[object Object]"
                      name="cabin_preference"
                      placeholder="Cabin Preference"
                    />
                  </div>
                </div>
              </div>
            </div>
            <button
              class="mt-4 _secondary_c8148e _button_c8148e"
              variant="secondary"
            >
              <div
                class="w-full justify-self-center"
              >
                Find Flights
              </div>
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
